[package]
name = "letsencrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls-acme = "*"
futures-rustls = { version = "0.26", default-features = false }
futures = "0.3.21"
clap = { version = "3.1.18", features = ["derive"] }
smol = "2.0.0"
smol-macros = "0.1.0"
macro_rules_attribute = "0.2.0"
config = "0.14.0"
